<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="71dp"
        android:layout_height="69dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_outline_local_dining_24" />

    <Button
        android:id="@+id/myOrder"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_my_order"
        android:textSize="16sp"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="918dp"
        android:layout_marginTop="2dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:padding="20dp"
        android:rowCount="2">

        <Button
            android:id="@+id/drinks"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/button_drinks"
            android:textSize="17sp" />

        <Button
            android:id="@+id/snacks"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="15dp"
            android:text="@string/button_snack"
            android:textSize="17sp" />

        <Button
            android:id="@+id/foods"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="15dp"
            android:text="@string/button_foods"
            android:textSize="17sp" />

        <Button
            android:id="@+id/topup"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="15dp"
            android:text="@string/button_topup"
            android:textSize="17sp" />

    </GridLayout>

</LinearLayout>