<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".OrderDetail">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="71dp"
        android:layout_height="69dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_outline_local_dining_24" />

    <Button
        android:id="@+id/myOrder"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_my_order"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="210dp" />

    <ImageView
        android:id="@+id/order_detail_img"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="180dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/order_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center_horizontal"
        android:text="TESTafjkeid" />

    <TextView
        android:id="@+id/order_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:text="test"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/button_quantity"/>

        <EditText
            android:id="@+id/quan"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="number"
            android:fontFamily="sans-serif-condensed" />

    </LinearLayout>

    <Button
        android:id="@+id/orderNow"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/button_order"/>

    <Button
        android:id="@+id/orderMore"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_order_more"/>

</LinearLayout>